--- a/public/assets/css/gasal.css
+++ b/public/assets/css/gasal.css
@@ -23,3 +23,44 @@
     height: 100vh;
     width: 100%;
 }
+
+.verifyWrapper{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgb(207, 255, 218), rgb(169, 222, 255));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.verifyWrapper h3{
+    text-align: center;
+    font-size: 22px;
+}
+.verifyWrapper h3 span{
+    font-size: 20px;
+    color: rgb(0, 0, 121);
+}
+.verifyWrapper input{
+    font-size: 20px;
+    font-weight: 900;
+    text-align: center;
+}
+.verifyWrapper .inputf{
+    display: flex;
+}
+.verifyWrapper .inputf button{
+    text-align: center;
+    height: fit-content;
+}
+.verifyWrapper form{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+@media only screen and (max-width: 600px){
+    .verifyWrapper .inputf{
+        flex-direction: column;
+    }
+}
