--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2424,17 +2424,17 @@
                             <div class="tab-content" id="tab-content-5">
                                 <div class="tab-pane fade show active" id="signin" role="tabpanel"
                                     aria-labelledby="signin-tab">
-                                    <form action="#">
+                                    <form action="/userlogin" method="post">
                                         <div class="form-group">
                                             <label for="singin-email">Email address *</label>
                                             <input type="text" class="form-control" id="singin-email"
-                                                name="singin-email" required>
+                                                name="email" required>
                                         </div>
 
                                         <div class="form-group">
                                             <label for="singin-password">Password *</label>
                                             <input type="password" class="form-control" id="singin-password"
-                                                name="singin-password" required>
+                                                name="password" required>
                                         </div>
 
                                         <div class="form-footer">
