--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -30,7 +30,7 @@
               <a class="nav-link" href="/admin/products" >Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Users</a>
+              <a class="nav-link" href="/admin/users">Users</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Coupan</a>
