added user manipulation

--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -240,35 +240,38 @@
 
                                 <div class="tab-pane fade" id="tab-account" role="tabpanel"
                                     aria-labelledby="tab-account-link">
-                                    <form action="#">
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <label>First Name *</label>
-                                                <input type="text" class="form-control" required>
-                                            </div><!-- End .col-sm-6 -->
-
-                                            <div class="col-sm-6">
-                                                <label>Last Name *</label>
-                                                <input type="text" class="form-control" required>
-                                            </div><!-- End .col-sm-6 -->
-                                        </div><!-- End .row -->
-
+                                    <form action="/editprofile" method="post">
                                         <label>Display Name *</label>
-                                        <input type="text" class="form-control" required>
+                                        <input type="text" class="form-control" name="name">
                                         <small class="form-text">This will be how your name will be displayed in the
                                             account section and in reviews</small>
 
                                         <label>Email address *</label>
-                                        <input type="email" class="form-control" required>
+                                        <input type="email" class="form-control" name="email" required>
+
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <label>Dob</label>
+                                                <input type="date" class="form-control" name="dob">
+                                            </div><!-- End .col-sm-6 -->
+
+                                            <div class="col-sm-6">
+                                                <label>Gender</label>
+                                                <select name="gender" class="form-control">
+                                                    <option value="male" selected>Male</option>
+                                                    <option value="female">Female</option>
+                                                </select>
+                                            </div><!-- End .col-sm-6 -->
+                                        </div><!-- End .row -->
 
                                         <label>Current password (leave blank to leave unchanged)</label>
-                                        <input type="password" class="form-control">
+                                        <input type="password" class="form-control" name="currentpass">
 
                                         <label>New password (leave blank to leave unchanged)</label>
-                                        <input type="password" class="form-control">
+                                        <input type="password" class="form-control" name="newpass">
 
                                         <label>Confirm new password</label>
-                                        <input type="password" class="form-control mb-2">
+                                        <input type="password" class="form-control mb-2" name="cpass">
 
                                         <button type="submit" class="btn btn-outline-primary-2">
                                             <span>SAVE CHANGES</span>
