--- a/public/assets/css/gasal.css
+++ b/public/assets/css/gasal.css
@@ -12,10 +12,11 @@
     backdrop-filter: blur(15px);
     padding: 20px 20px;
     min-width: 40%;
-    max-width: 45%;
     border-radius: 10px;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.312);
     color: black;
+    max-height: 600px;
+    overflow-y: scroll;
 }
 
 .adminWrapper{
@@ -70,3 +71,15 @@
     background: white;
     padding: 20px 20px;
 }
+
+/* Admin/login.ejs styles */
+.adminlogin{
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(rgba(255, 0, 0, 0.244), rgba(0, 0, 0, 0.321));
+}
+
