--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0" style="margin-left: auto;">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/admin">Dashboard</a>
+              <a class="nav-link" aria-current="page" href="/admin/dash">Dashboard</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/admin/products" >Product</a>
@@ -34,6 +34,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Coupan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-warning" href="/admin/logout">LOGOUT</a>
             </li>
           </ul>
         </div>
