--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -51,9 +51,13 @@
 
                         <div class="col-md-8 col-lg-9">
                             <div class="tab-content">
+                                <% if(error){ %>
+                                    <h6 style="color: orangered;font-size: 14px;"><%= error %> <a href="#tab-account" class="tab-trigger-link"> click to change passwords</a></h6>
+                                <% } %>
                                 <% if(!cookies){ %>
                                     <a href="#signin-modal" data-toggle="modal"><h6 style="color: orangered;"><u>Login to view your profile</u></h6></a>
                                 <% } else { %>
+                                    
                                 <div class="tab-pane fade show active" id="tab-dashboard" role="tabpanel"
                                     aria-labelledby="tab-dashboard-link">
                                     <p>Hello <span class="font-weight-normal text-dark"><%= cookies.name %></span> (not <span
@@ -104,23 +108,23 @@
                                                                 <form action="/primaryaddress" method="post">
                                                                     <div class="mb-3">
                                                                       <label class="form-label">Country</label>
-                                                                      <input type="text" class="form-control" name="country">
+                                                                      <input type="text" class="form-control" name="country" value="<%= address?address.Firstaddress.Country:null %>">
                                                                     </div>
                                                                     <div class="mb-3">
                                                                       <label class="form-label">city</label>
-                                                                      <input type="text" class="form-control" name="city">
+                                                                      <input type="text" class="form-control" name="city" value="<%= address?address.Firstaddress.City:null %>">
                                                                     </div>
                                                                     <div class="mb-3">
                                                                       <label class="form-label">place</label>
-                                                                      <input type="text" class="form-control" name="place">
+                                                                      <input type="text" class="form-control" name="place" value="<%= address?address.Firstaddress.Place:null %>">
                                                                     </div>
                                                                     <div class="mb-3">
                                                                       <label class="form-label">landmark</label>
-                                                                      <input type="text" class="form-control" name="landmark">
+                                                                      <input type="text" class="form-control" name="landmark" value="<%= address?address.Firstaddress.Landmark:null %>">
                                                                     </div>
                                                                     <div class="mb-3">
                                                                       <label class="form-label">pincode</label>
-                                                                      <input type="text" class="form-control" name="pincode">
+                                                                      <input type="text" class="form-control" name="pincode" value="<%= address?address.Firstaddress.Pincode:null %>">
                                                                     </div>
                                                                     <button type="submit" class="btn btn-primary">Save it</button>
                                                                   </form>
@@ -185,23 +189,23 @@
                                                                         <form action="/secondaryaddress" method="post">
                                                                             <div class="mb-3">
                                                                               <label class="form-label">Country</label>
-                                                                              <input type="text" class="form-control" name="country">
+                                                                              <input type="text" class="form-control" name="country" value="<%= address?address.Secondaddress.Country:null %>">
                                                                             </div>
                                                                             <div class="mb-3">
                                                                               <label class="form-label">city</label>
-                                                                              <input type="text" class="form-control" name="city">
+                                                                              <input type="text" class="form-control" name="city" value="<%= address?address.Secondaddress.City:null %>">
                                                                             </div>
                                                                             <div class="mb-3">
                                                                               <label class="form-label">place</label>
-                                                                              <input type="text" class="form-control" name="place">
+                                                                              <input type="text" class="form-control" name="place" value="<%= address?address.Secondaddress.Place:null %>">
                                                                             </div>
                                                                             <div class="mb-3">
                                                                               <label class="form-label">landmark</label>
-                                                                              <input type="text" class="form-control" name="landmark">
+                                                                              <input type="text" class="form-control" name="landmark" value="<%= address?address.Secondaddress.Landmark:null %>">
                                                                             </div>
                                                                             <div class="mb-3">
                                                                               <label class="form-label">pincode</label>
-                                                                              <input type="text" class="form-control" name="pincode">
+                                                                              <input type="text" class="form-control" name="pincode" value="<%= address?address.Secondaddress.Pincode:null %>">
                                                                             </div>
                                                                             <button type="submit" class="btn btn-primary">Save it</button>
                                                                           </form>
@@ -242,22 +246,36 @@
                                     aria-labelledby="tab-account-link">
                                     <form action="/editprofile" method="post">
                                         <label>Display Name *</label>
-                                        <input type="text" class="form-control" name="name">
+                                        <input type="text" class="form-control" name="name" value="<%= cookies?cookies.name:null %>">
                                         <small class="form-text">This will be how your name will be displayed in the
                                             account section and in reviews</small>
 
                                         <label>Email address *</label>
-                                        <input type="email" class="form-control" name="email" required>
+                                        <input type="email" class="form-control" name="email" value="<%= cookies?cookies.email:null %>"  required>
+
+                                        <label>Phone number</label>
+                                        <input type="tel" class="form-control" name="phone" value="<%= cookies?cookies.phone:null %>" >
 
                                         <div class="row">
                                             <div class="col-sm-6">
                                                 <label>Dob</label>
-                                                <input type="date" class="form-control" name="dob">
-                                            </div><!-- End .col-sm-6 -->
+                                                <% if (cookies && cookies.dob) { %>
+                                                    <% const dobDate = new Date(cookies.dob); %>
+                                                    <% if (!isNaN(dobDate)) { %>
+                                                        <input type="date" class="form-control" name="dob" value="<%= dobDate.toISOString().split('T')[0] %>">
+                                                    <% } else { %>
+                                                        <input type="date" class="form-control" name="dob" value="">
+                                                        <small class="text-danger">Invalid date format in cookies.</small>
+                                                    <% } %>
+                                                <% } else { %>
+                                                    <input type="date" class="form-control" name="dob" value="">
+                                                <% } %>
+                                            </div>
+                                            <!-- End .col-sm-6 -->
 
                                             <div class="col-sm-6">
                                                 <label>Gender</label>
-                                                <select name="gender" class="form-control">
+                                                <select name="gender" class="form-control" value="<%= cookies?cookies.gender:null %>">
                                                     <option value="male" selected>Male</option>
                                                     <option value="female">Female</option>
                                                 </select>
@@ -481,29 +499,30 @@
                     <div class="form-tab">
                         <ul class="nav nav-pills nav-fill" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" id="signin-tab" data-toggle="tab" href="#signin" role="tab"
-                                    aria-controls="signin" aria-selected="true">Sign In</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="register-tab" data-toggle="tab" href="#register" role="tab"
-                                    aria-controls="register" aria-selected="false">Register</a>
+                                <a class="nav-link active" id="signin-tab" data-toggle="tab" href="#signin"
+                                    role="tab" aria-controls="signin" aria-selected="true">Sign In</a>
                             </li>
                         </ul>
                         <div class="tab-content" id="tab-content-5">
                             <div class="tab-pane fade show active" id="signin" role="tabpanel"
                                 aria-labelledby="signin-tab">
-                                <form action="#">
+                                <form action="/userlogin" method="post">
                                     <div class="form-group">
-                                        <label for="singin-email">Username or email address *</label>
-                                        <input type="text" class="form-control" id="singin-email" name="singin-email"
-                                            required>
-                                    </div><!-- End .form-group -->
+                                        <label for="singin-email">Email address *</label>
+                                        <input type="text" class="form-control" id="singin-email" name="email"
+                                            onchange="emailcheck()" required>
+                                    </div>
 
                                     <div class="form-group">
                                         <label for="singin-password">Password *</label>
                                         <input type="password" class="form-control" id="singin-password"
-                                            name="singin-password" required>
-                                    </div><!-- End .form-group -->
+                                            name="password" required>
+                                    </div>
+
+                                    <h6 id="form-error" style="color: red; font-size: 12px;"></h6>
+                                    <% if(error){ %>
+                                    <h6 style="color: red; font-size: 12px;"><%= error.form %></h6>
+                                    <%}%>
 
                                     <div class="form-footer">
                                         <button type="submit" class="btn btn-outline-primary-2">
@@ -511,14 +530,12 @@
                                             <i class="icon-long-arrow-right"></i>
                                         </button>
 
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="signin-remember">
-                                            <label class="custom-control-label" for="signin-remember">Remember
-                                                Me</label>
-                                        </div><!-- End .custom-checkbox -->
+                                        <div class="custom-control">
+                                            <a href="/registernow">I'm a new user</a>
+                                        </div>
 
                                         <a href="#" class="forgot-link">Forgot Your Password?</a>
-                                    </div><!-- End .form-footer -->
+                                    </div>
                                 </form>
                                 <div class="form-choice">
                                     <p class="text-center">or sign in with</p>
@@ -528,62 +545,17 @@
                                                 <i class="icon-google"></i>
                                                 Login With Google
                                             </a>
-                                        </div><!-- End .col-6 -->
+                                        </div>
                                         <div class="col-sm-6">
                                             <a href="#" class="btn btn-login btn-f">
                                                 <i class="icon-facebook-f"></i>
                                                 Login With Facebook
                                             </a>
-                                        </div><!-- End .col-6 -->
-                                    </div><!-- End .row -->
-                                </div><!-- End .form-choice -->
-                            </div><!-- .End .tab-pane -->
-                            <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                                <form action="#">
-                                    <div class="form-group">
-                                        <label for="register-email">Your email address *</label>
-                                        <input type="email" class="form-control" id="register-email"
-                                            name="register-email" required>
-                                    </div><!-- End .form-group -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-                                    <div class="form-group">
-                                        <label for="register-password">Password *</label>
-                                        <input type="password" class="form-control" id="register-password"
-                                            name="register-password" required>
-                                    </div><!-- End .form-group -->
-
-                                    <div class="form-footer">
-                                        <button type="submit" class="btn btn-outline-primary-2">
-                                            <span>SIGN UP</span>
-                                            <i class="icon-long-arrow-right"></i>
-                                        </button>
-
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="register-policy"
-                                                required>
-                                            <label class="custom-control-label" for="register-policy">I agree to the <a
-                                                    href="#">privacy policy</a> *</label>
-                                        </div><!-- End .custom-checkbox -->
-                                    </div><!-- End .form-footer -->
-                                </form>
-                                <div class="form-choice">
-                                    <p class="text-center">or sign in with</p>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <a href="#" class="btn btn-login btn-g">
-                                                <i class="icon-google"></i>
-                                                Login With Google
-                                            </a>
-                                        </div><!-- End .col-6 -->
-                                        <div class="col-sm-6">
-                                            <a href="#" class="btn btn-login  btn-f">
-                                                <i class="icon-facebook-f"></i>
-                                                Login With Facebook
-                                            </a>
-                                        </div><!-- End .col-6 -->
-                                    </div><!-- End .row -->
-                                </div><!-- End .form-choice -->
-                            </div><!-- .End .tab-pane -->
                         </div><!-- End .tab-content -->
                     </div><!-- End .form-tab -->
                 </div><!-- End .form-box -->
