From home all the product things are corrected only admin side

--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -33,7 +33,7 @@
               <a class="nav-link" href="/admin/users">Users</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Coupan</a>
+              <a class="nav-link" href="/admin/categories">Categories</a>
             </li>
             <li class="nav-item">
               <a class="nav-link btn btn-outline-warning" href="/admin/logout">LOGOUT</a>
