--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -17,13 +17,13 @@
             <form action="/admin/adminlogin" method="post">
                 <div class="mb-3">
                     <label class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email">
+                    <input type="email" class="form-control emailid" name="email" onchange="emailcheck()">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Password</label>
                     <input type="password" class="form-control" name="password">
                 </div>
-                <h6 style="color: red;"><%= error %></h6>
+                <h6 style="color: red; " class="f-error"><%= error %></h6>
                 <button type="submit" class="btn btn-dark">Submit</button>
             </form>
         </div>
@@ -32,6 +32,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script>
+            var theError = document.querySelector('.f-error');
+    
+            emailcheck = () => {
+                let email = document.querySelector('.emailid').value;
+                if (email.length < 1) {
+                    theError.innerHTML = "Not meeting minimum charecters"
+                    return false;
+                }
+                if (!email.match(/^[a-zA-Z0-9]+@/)) {
+                    theError.innerHTML = "Not valid mail id"
+                    return false;
+                }
+                theError.innerHTML = null
+                return theError = null;
+            }
+    
+        </script>
 </body>
 
 </html>
