--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -10,15 +10,12 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Profile</th>
                     <th scope="col">User Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Phone</th>
-                    <th scope="col">block</th>
-                    <th scope="col">un-block</th>
-                    <!-- <th scope="col">edit</th> -->
+                    <th scope="col">block / unblock</th>
+                    <th scope="col">details</th>
                     <th scope="col">delete</th>
-                    <th scope="col">Status</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,8 +24,6 @@
                         <th scope="row">
                             <%= index + 1 %>
                         </th>
-                        <td><img src="/assets/images/icons/logo.png"
-                                style="width: 40px;height: 40px;object-fit: cover;border-radius: 10px;"></td>
                         <td class="user-name">
                             <%= user.Username %>
                         </td>
@@ -39,26 +34,20 @@
                             <%= user.Phone %>
                         </td>
                         <td>
-                            <a href="/admin/blockuser/<%= user.Email %>" class="btn btn-warning delete-button"
-                                style="width: 80px;">Block</a>
+                            <% if(user.Blocked){ %>
+                                <a href="/admin/unblockuser/<%= user.Email %>" class="btn btn-dark delete-button"
+                                    style="width: 80px;" onclick="return confirm('Are you sure you want to Unblock this user?')" >UnBlock</a>
+                                <% } else { %>
+                                    <a href="/admin/blockuser/<%= user.Email %>" class="btn btn-success delete-button"
+                                        style="width: 80px;" onclick="return confirm('Are you sure you want to block this user?')" >Block</a>
+                                    <% } %>
                         </td>
                         <td>
-                            <a href="/admin/unblockuser/<%= user.Email %>" class="btn btn-success delete-button"
-                                style="width: 80px;">UnBlock</a>
+                            <button class="btn btn-primary openEditBtn" style="width: 80px;" onclick="">View</button>
                         </td>
-                        <!-- <td>
-                            <button class="btn btn-primary openEditBtn" style="width: 80px;" onclick="">Edit</button>
-                        </td> -->
                         <td>
                             <a href="/admin/deleteuser/<%= user._id %>" class="btn btn-danger delete-button"
                                 onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
-                        </td>
-                        <td>
-                            <% if(user.Blocked){ %>
-                                <button class="btn btn-outline-danger" style="width: 80px;">blocked</button>
-                                <% } else { %>
-                                    <button class="btn btn-outline-primary" style="width: 80px;">active</button>
-                                    <% } %>
                         </td>
                     </tr>
                     <% }); %>
