--- a/views/user/head.ejs
+++ b/views/user/head.ejs
@@ -29,11 +29,13 @@
     <link rel="stylesheet" href="assets/css/plugins/jquery.countdown.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/plugins/nouislider/nouislider.css">
     <link rel="stylesheet" href="assets/css/skins/skin-demo-2.css">
     <link rel="stylesheet" href="assets/css/demos/demo-2.css">
     <link rel="stylesheet" href="assets/css/gasal.css">
 </head>
 
 <body>
+    <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
 
     
