--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -1,3 +1,165 @@
 <%- include('head.ejs') %>
-<h5>This is category Page</h5>
-<%- include('foot.ejs') %>
+
+    <div style="width: 100%;">
+        <h3 class="headtext p-3"><i class="fa-solid fa-cog"></i> Category control</h3>
+        <div class="category-wrapper">
+            <div class="productsNav mt-3 mb-5">
+                <div class="searchBar">
+                    <input type="search" placeholder="search by category name" id="categorySearch">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <button class="btn btn-success" id="openAddCategory"><i class="fa-solid fa-plus"></i> Category</button>
+            </div>
+            <div class="div tableWrapper">
+                <table class="table table-light">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Category Name</th>
+                            <th scope="col">Sub categories</th>
+                            <th scope="col">Products</th>
+                            <th scope="col">edit</th>
+                            <th scope="col">delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% categories.map((category, index)=> { %>
+                            <tr class="category-row">
+                                <th scope="row">
+                                    <%= index + 1 %>
+                                </th>
+                                <td class="category-name">
+                                    <%= category.Catname %>
+                                </td>
+                                <td class="subcategory">
+                                    <%= category.Subcat %>
+                                </td>
+                                <td>
+                                    <% const matchingCategory=pcount.find(pcountItem=> pcountItem.category ===
+                                        category.Catname.toLowerCase()) %>
+                                        <% if (matchingCategory) { %>
+                                            <%= matchingCategory.count %>
+                                                <% } else { %>
+                                                    0
+                                                    <!-- Or any default value you want to display if no count found -->
+                                                    <% } %>
+                                </td>
+                                <td><button class="btn btn-primary w-75 openEditCateg"
+                                        onclick="editCateg({catname:'<%= category.Catname %>', subcat:'<%= category.Subcat %>', catid:'<%= category._id %>'})">Edit</button>
+                                </td>
+                                <td><a href="/admin/deletecategory/<%= category._id %>" class="btn btn-danger w-75"
+                                        onclick="return confirm('Are you sure you want to delete this category?')">Delete</a>
+                                </td>
+                            </tr>
+                            <% }); %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <!-- ADD CATEGORY -->
+        <div class="catpop" style="display: none;">
+            <div><button class="btn btn-danger closeBtn">close</button></div>
+            <div class="formDiv">
+                <h6 class="text-center">Add new category</h6>
+                <form action="/admin/addcategory" method="post">
+                    <div class="mb-3">
+                        <label class="form-label">Categoryname Name</label>
+                        <input type="text" class="form-control" value="" name="cname"
+                            placeholder="Enter a new category">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Sub categoris</label>
+                        <input type="text" class="form-control" value="" name="scateg"
+                            placeholder="Enter comma seperated words">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Category</button>
+                </form>
+            </div>
+        </div>
+        <!-- EDIT CATEGORY -->
+        <div class="editcatpop" style="display: none;">
+            <div><button class="btn btn-danger closeBtn">close</button></div>
+            <div class="formDiv">
+                <h6 class="text-center">Add new category</h6>
+                <form onsubmit="editcategory()" id="theEditCategory" method="post">
+                    <div class="mb-3">
+                        <label class="form-label">Categoryname Name</label>
+                        <input type="text" id="cname" class="form-control" value="" name="cname"
+                            placeholder="Enter a new category">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Sub categoris</label>
+                        <input type="text" id="scateg" class="form-control" value="" name="scateg"
+                            placeholder="Enter comma seperated words">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Category</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+
+            // Select the search input field
+            const productSearchInput = document.getElementById('categorySearch');
+
+            // Select all product rows
+            const productRows = document.querySelectorAll('.category-row');
+
+            productSearchInput.addEventListener('input', () => {
+                const searchTerm = productSearchInput.value.toLowerCase();
+
+                // Loop through all product rows and hide those that don't match the search term
+                productRows.forEach((row) => {
+                    const productName = row.querySelector('.category-name').textContent.toLowerCase();
+                    const productCategory = row.querySelector('.subcategory').textContent.toLowerCase();
+
+                    if (
+                        productName.includes(searchTerm) ||
+                        productCategory.includes(searchTerm)
+                    ) {
+                        row.style.display = 'table-row';
+                    } else {
+                        row.style.display = 'none';
+                    }
+                });
+            });
+
+        })
+    </script>
+
+    <script>
+        let catid = ''
+        function editCateg(category) {
+            catid = category.catid
+            document.getElementById('cname').value = category.catname;
+            document.getElementById('scateg').value = category.subcat;
+        }
+        function editcategory() {
+            document.querySelector("#theEditCategory").action = "/admin/editcategory/" + catid;
+        }
+    </script>
+
+    <script>
+        $(document).ready(() => {
+            $("#openAddCategory").click(() => {
+                $(".catpop").toggle(300);
+            })
+            $(".catpop .closeBtn").click(() => {
+                $(".catpop").toggle(300);
+            })
+        })
+    </script>
+    <script>
+        $(document).ready(() => {
+            $(".openEditCateg").click(() => {
+                $(".editcatpop").toggle(300);
+            })
+            $(".editcatpop .closeBtn").click(() => {
+                $(".editcatpop").toggle(300);
+            })
+        })
+    </script>
+
+    <%- include('foot.ejs') %>
