--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,6 +1,6 @@
 <%- include('head.ejs') %>
 
 <h1>Working withDashboard designs..</h1>
-<h3>You can host control Products and Users sector</h3>
+<h3>You can have control over other sectors except the Dash</h3>
     
     <%- include('foot.ejs') %>
