--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -1,44 +1,326 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TB-Admin-Panel</title>
-    <link rel="stylesheet" href="path/to/line-awesome/css/line-awesome-font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="/admin/stylesheet/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css" integrity="sha512-vebUliqxrVkBy3gucMhClmyQP9On/HAWQdKDXRaAlb/FKuTbxkjPKUyqVOxAcGwFDka79eTF+YXwfke1h3/wfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  </head>
-  <body>
+<html>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-          <div class="adminData">
-              <img src="/admin/images/gasal.jpg" alt="">
-              <span>Admin-Info</span>
-          </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0" style="margin-left: auto;">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/admin/dash">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/products" >Product</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/users">Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/categories">Categories</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-outline-warning" href="/admin/logout">LOGOUT</a>
-            </li>
-          </ul>
+<head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>TB-Admin Panel</title>
+    <link href='' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+        integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <link rel="stylesheet" href="path/to/line-awesome/css/line-awesome-font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="/admin/stylesheet/style.css">
+        <link rel="stylesheet" href="/admin/stylesheet/category.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Roboto", sans-serif;
+        }
+
+        header {
+            z-index: 1;
+            position: fixed;
+            background: #22242A;
+            width: calc(100% - 0%);
+            top: 0;
+            height: 70px;
+        }
+
+        .left_area h3 {
+            color: #fff;
+            margin: 0;
+            text-transform: uppercase;
+            font-size: 22px;
+            font-weight: 900;
+        }
+
+        .left_area span {
+            color: #19B3D3;
+        }
+
+        .logout_btn {
+            padding: 5px;
+            background: #19B3D3;
+            text-decoration: none;
+            float: right;
+            margin-top: -30px;
+            margin-right: 40px;
+            border-radius: 2px;
+            font-size: 15px;
+            font-weight: 600;
+            color: #fff;
+            transition: 0.5s;
+            transition-property: background;
+        }
+
+        .logout_btn:hover {
+            background: #0B87A6;
+        }
+
+        .sidebar {
+            z-index: 1;
+            top: 0;
+            background: #2f323a;
+            margin-top: 70px;
+            padding-top: 30px;
+            position: fixed;
+            left: 0;
+            width: 250px;
+            height: calc(100% - 9%);
+            transition: 0.5s;
+            transition-property: left;
+            overflow-y: auto;
+        }
+
+        .profile_info {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .sidebar .profile_info .profile_image {
+            width: 100px;
+            height: 100px;
+            border-radius: 100px;
+            margin-bottom: 10px;
+        }
+
+        .sidebar .profile_info h4 {
+            color: #ccc;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+
+        .sidebar a {
+            color: #fff;
+            display: block;
+            width: 100%;
+            line-height: 60px;
+            text-decoration: none;
+            padding-left: 40px;
+            box-sizing: border-box;
+            transition: 0.5s;
+            transition-property: background;
+        }
+
+        .sidebar a:hover {
+            background: #19B3D3;
+        }
+
+        .sidebar i {
+            padding-right: 10px;
+        }
+
+        label #sidebar_btn {
+            z-index: 1;
+            color: #fff;
+            position: fixed;
+            cursor: pointer;
+            left: 300px;
+            font-size: 20px;
+            margin: 5px 0;
+            transition: 0.5s;
+            transition-property: color;
+        }
+
+        label #sidebar_btn:hover {
+            color: #19B3D3;
+        }
+
+        #check:checked~.sidebar {
+            left: -185px;
+        }
+
+        #check:checked~.sidebar a span {
+            display: none;
+        }
+
+        #check:checked~.sidebar a {
+            font-size: 20px;
+            margin-left: 165px;
+            width: 100%;
+        }
+
+        .content {
+            width: (100% - 250px);
+            margin-top: 60px;
+            padding: 20px;
+            margin-left: 250px;
+            background: url(background.png) no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100vh;
+            transition: 0.5s;
+        }
+
+        #check:checked~.content {
+            margin-left: 60px;
+        }
+
+        #check:checked~.sidebar .profile_info {
+            display: none;
+        }
+
+        #check {
+            display: none;
+        }
+
+        .mobile_nav {
+            display: none;
+        }
+
+        .content .card p {
+            background: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            font-size: 14px;
+            opacity: 0.8;
+        }
+
+        /* Responsive CSS */
+
+        @media screen and (max-width: 780px) {
+            .sidebar {
+                display: none;
+            }
+
+            #sidebar_btn {
+                display: none;
+            }
+
+            .content {
+                margin-left: 0;
+                margin-top: 0;
+                padding: 10px 20px;
+                transition: 0s;
+            }
+
+            #check:checked~.content {
+                margin-left: 0;
+            }
+
+            .mobile_nav {
+                display: block;
+                width: calc(100% - 0%);
+            }
+
+            .nav_bar {
+                background: #222;
+                width: (100% - 0px);
+                margin-top: 70px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px 20px;
+            }
+
+            .nav_bar .mobile_profile_image {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+
+            .nav_bar .nav_btn {
+                color: #fff;
+                font-size: 22px;
+                cursor: pointer;
+                transition: 0.5s;
+                transition-property: color;
+            }
+
+            .nav_bar .nav_btn:hover {
+                color: #19B3D3;
+            }
+
+            .mobile_nav_items {
+                background: #2F323A;
+                display: none;
+            }
+
+            .mobile_nav_items a {
+                color: #fff;
+                display: block;
+                text-align: center;
+                letter-spacing: 1px;
+                line-height: 60px;
+                text-decoration: none;
+                box-sizing: border-box;
+                transition: 0.5s;
+                transition-property: background;
+            }
+
+            .mobile_nav_items a:hover {
+                background: #19B3D3;
+            }
+
+            .mobile_nav_items i {
+                padding-right: 10px;
+            }
+
+            .active {
+                display: block;
+            }
+        }
+    </style>
+    <script type='text/javascript' src=''></script>
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+    <script type='text/javascript' src=''></script>
+</head>
+
+<body oncontextmenu='return false' class='snippet-body'>
+    <input type="checkbox" id="check">
+    <!--header area start-->
+    <header>
+        <label for="check">
+            <i class="fas fa-bars" id="sidebar_btn"></i>
+        </label>
+        <div class="left_area">
+            <h3>Touch<span>Brand</span></h3>
         </div>
-      </div>
-  </nav>
+        <div class="right_area">
+            <a href="/admin/logout" class="logout_btn">Sign-Out</a>
+        </div>
+    </header>
+    <!--header area end-->
+    <!--mobile navigation bar start-->
+    <div class="mobile_nav">
+        <div class="nav_bar">
+            <img src="1.png" class="mobile_profile_image" alt="">
+            <i class="fa fa-bars nav_btn"></i>
+        </div>
+        <div class="mobile_nav_items">
+            <a href="/admin/dash"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
+            <a href="#"><i class="fas fa-sliders-h"></i><span>Banner</span></a>
+            <a href="/admin/products"><i class="fas fa-table"></i><span>Products</span></a>
+            <a href="/admin/users"><i class="fas fa-users"></i><span>Users</span></a>
+            <a href="/admin/categories"><i class="fas fa-cogs"></i><span>Categories</span></a>
+        </div>
+    </div>
+    <!--mobile navigation bar end-->
+    <!--sidebar start-->
+    <div class="sidebar">
+        <div class="profile_info">
+            <img src="https://i.imgur.com/iQpdHb2.jpg" class="profile_image" alt="">
+            <h4>Admin Name</h4>
+        </div>
+        <a href="/admin/dash"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
+        <a href="/admin/banner"><i class="fas fa-sliders-h"></i><span>Banner</span></a>
+        <a href="/admin/products"><i class="fas fa-table"></i><span>Products</span></a>
+        <a href="/admin/users"><i class="fas fa-users"></i><span>Users</span></a>
+        <a href="/admin/categories"><i class="fas fa-cogs"></i><span>Categories</span></a>
+    </div>
+    <!--sidebar end-->
+
+    <div class="content">
