--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,165 +1,164 @@
 <%- include('head.ejs') %>
 
-    <div class="product-wrapper">
-        <div class="productsNav mt-3 mb-5">
-            <div class="searchBar">
-                <input type="search" placeholder="search by name or category" id="productSearch">
-                <i class="las la-search"></i>
+    <div style="width: 100%;">
+        <h3 class="headtext p-3"><i class="fa-solid fa-cog"></i> Product control</h3>
+        <div class="product-wrapper">
+            <div class="productsNav mt-3 mb-5">
+                <button class="btn btn-success" id="openAddProduct">Add Products</button>
             </div>
-            <button class="btn btn-success" id="openAddProduct">Add Products</button>
-        </div>
-        <div class="div tableWrapper">
-            <table class="table table-light">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Product Name</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Items Left</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">edit</th>
-                        <th scope="col">delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% products.map((product, index)=> { %>
-                        <tr class="product-row">
-                            <th scope="row">
-                                <%= index + 1 %>
-                            </th>
-                            <td class="product-name">
-                                <%= product.Productname %>
-                            </td>
-                            <td class="product-category">
-                                <%= product.Category %>
-                            </td>
-                            <td>
-                                $<%= product.Price %>
-                            </td>
-                            <td>
-                                <%= product.Stoke %>
-                            </td>
-                            <td><img src="<%= product.Imagepath[0] %>"
-                                    style="width: 40px;height: 40px;object-fit: cover;border-radius: 10px;"></td>
-                            <td>
-                                <button class="btn btn-primary openEditBtn" onclick="editClick({
-                                        pid: `<%= product._id %>`,
-                                        pname:`<%= product.Productname %>`,
-                                        category: `<%= product.Category %>`,
-                                        specs: `<%= product.Spec %>`,
-                                        desc: `<%= product.Description %>`,
-                                        price: `<%= product.Price %>`,
-                                        scost: `<%= product.Shipingcost %>`,
-                                        discount: `<%= product.Discount %>`,
-                                        stoke: `<%= product.Stoke %>`,
-                                        images: `<%- product.Imagepath %>`
-                                    })">Edit</button>
-                            </td>
-                            <td>
-                                <a href="/admin/deleteproduct/<%= product._id %>" class="btn btn-danger delete-button"
-                                    onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
-                            </td>
+            <div class="div tableWrapper">
+                <table class="table table-light">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Product Name</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Items Left</th>
+                            <th scope="col">Image</th>
+                            <th scope="col">edit</th>
+                            <th scope="col">delete</th>
                         </tr>
-                        <% }); %>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        <% products.map((product, index)=> { %>
+                            <tr class="product-row">
+                                <th scope="row">
+                                    <%= index + 1 %>
+                                </th>
+                                <td class="product-name">
+                                    <%= product.Productname %>
+                                </td>
+                                <td class="product-category">
+                                    <%= product.Category %>
+                                </td>
+                                <td>
+                                    $<%= product.Price %>
+                                </td>
+                                <td>
+                                    <%= product.Stoke %>
+                                </td>
+                                <td><img src="<%= product.Imagepath[0] %>"
+                                        style="width: 40px;height: 40px;object-fit: cover;border-radius: 10px;"></td>
+                                <td>
+                                    <button class="btn btn-primary openEditBtn" onclick="editClick({
+                                            pid: `<%= product._id %>`,
+                                            pname:`<%= product.Productname %>`,
+                                            category: `<%= product.Category %>`,
+                                            specs: `<%= product.Spec %>`,
+                                            desc: `<%= product.Description %>`,
+                                            price: `<%= product.Price %>`,
+                                            scost: `<%= product.Shipingcost %>`,
+                                            discount: `<%= product.Discount %>`,
+                                            stoke: `<%= product.Stoke %>`,
+                                            images: `<%- product.Imagepath %>`
+                                        })">Edit</button>
+                                </td>
+                                <td>
+                                    <a href="/admin/deleteproduct/<%= product._id %>" class="btn btn-danger delete-button"
+                                        onclick="return confirm('Are you sure you want to delete this product?')">Delete</a>
+                                </td>
+                            </tr>
+                            <% }); %>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
-    <!-- ADD PRODUCT FORM... -->
-    <div class="popUp" style="display: none;">
-        <div><button class="btn btn-danger closeBtn">close</button></div>
-        <div class="formDiv">
-            <h6 class="text-center">Add new product</h6>
-            <form action="/admin/addproduct" method="post" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label class="form-label">Product Name</label>
-                    <input type="text" class="form-control" name="pname">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Category</label>
-                    <input type="text" class="form-control" name="category">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Specs</label>
-                    <input type="text" class="form-control" name="specs">
-                </div>
-                <div class="form-floating mb-3">
-                    <textarea class="form-control" name="desc" placeholder="Leave a comment here"
-                        id="floatingTextarea"></textarea>
-                    <label for="floatingTextarea">Description</label>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Price</label>
-                    <input type="number" name="price" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Shipping cost</label>
-                    <input type="number" name="scost" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Discount amount</label>
-                    <input type="number" name="discount" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Total stock</label>
-                    <input type="number" name="stoke" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Select the images</label>
-                    <input type="file" class="form-control" id="fileUpload" name="images" multiple>
-                </div>
-                <div id="imagePreview"></div>
-                <button type="submit" class="btn btn-primary">Add product</button>
-            </form>
+        <!-- ADD PRODUCT FORM... -->
+        <div class="popUp" style="display: none;">
+            <div><button class="btn btn-danger closeBtn">close</button></div>
+            <div class="formDiv">
+                <h6 class="text-center">Add new product</h6>
+                <form action="/admin/addproduct" method="post" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label class="form-label">Product Name</label>
+                        <input type="text" class="form-control" name="pname">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Category</label>
+                        <input type="text" class="form-control" name="category">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Specs</label>
+                        <input type="text" class="form-control" name="specs">
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control" name="desc" placeholder="Leave a comment here"
+                            id="floatingTextarea"></textarea>
+                        <label for="floatingTextarea">Description</label>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Price</label>
+                        <input type="number" name="price" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Shipping cost</label>
+                        <input type="number" name="scost" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Discount amount</label>
+                        <input type="number" name="discount" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Total stock</label>
+                        <input type="number" name="stoke" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Select the images</label>
+                        <input type="file" class="form-control" id="fileUpload" name="images" multiple>
+                    </div>
+                    <div id="imagePreview"></div>
+                    <button type="submit" class="btn btn-primary">Add product</button>
+                </form>
+            </div>
         </div>
-    </div>
-    <!-- EDIT PRODUCT FORM -->
-    <div class="popUp-edit" style="display: none;">
-        <div><button class="btn btn-danger closeBtn-edit">close</button></div>
-        <div class="formDiv">
-            <h6 class="text-center">Edit the product</h6>
-            <form method="post" onsubmit="editproduct()" id="theEditForm" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label class="form-label">Product Name</label>
-                    <input type="text" class="form-control" name="pname" id="pname">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Category</label>
-                    <input type="text" class="form-control" name="category" id="category">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Specs</label>
-                    <input type="text" class="form-control" name="specs" id="specs">
-                </div>
-                <div class="form-floating mb-3">
-                    <textarea class="form-control" name="desc" placeholder="Leave a comment here" id="desc"></textarea>
-                    <label for="desc">Description</label>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Price</label>
-                    <input type="number" name="price" id="price" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Shipping cost</label>
-                    <input type="number" name="scost" id="scost" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Discount amount</label>
-                    <input type="number" name="discount" id="discount" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Total stoke</label>
-                    <input type="number" name="stoke" id="stoke" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Select the images</label>
-                    <input type="file" class="form-control" id="editfileUpload" name="images" multiple>
-                </div>
-                <h6>images</h6>
-                <div id="editImagePreview"></div>
-                <button type="submit" class="btn btn-primary">Edit product</button>
-            </form>
+        <!-- EDIT PRODUCT FORM -->
+        <div class="popUp-edit" style="display: none;">
+            <div><button class="btn btn-danger closeBtn-edit">close</button></div>
+            <div class="formDiv">
+                <h6 class="text-center">Edit the product</h6>
+                <form method="post" onsubmit="editproduct()" id="theEditForm" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label class="form-label">Product Name</label>
+                        <input type="text" class="form-control" name="pname" id="pname">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Category</label>
+                        <input type="text" class="form-control" name="category" id="category">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Specs</label>
+                        <input type="text" class="form-control" name="specs" id="specs">
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control" name="desc" placeholder="Leave a comment here" id="desc"></textarea>
+                        <label for="desc">Description</label>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Price</label>
+                        <input type="number" name="price" id="price" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Shipping cost</label>
+                        <input type="number" name="scost" id="scost" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Discount amount</label>
+                        <input type="number" name="discount" id="discount" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Total stoke</label>
+                        <input type="number" name="stoke" id="stoke" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Select the images</label>
+                        <input type="file" class="form-control" id="editfileUpload" name="images" multiple>
+                    </div>
+                    <h6>images</h6>
+                    <div id="editImagePreview"></div>
+                    <button type="submit" class="btn btn-primary">Edit product</button>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -206,6 +205,7 @@
             });
         }
 
+        
         function editproduct() {
             document.querySelector("#theEditForm").action = "/admin/editproduct/" + productid;
         }
