--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -1,59 +1,66 @@
 <%- include('head.ejs') %>
-    <div class="productsNav mt-3 mb-5">
-        <div class="searchBar">
-            <input type="search" placeholder="Search by name or email" id="userSearch">
-            <i class="las la-search"></i>
+    <div style="width: 100%;">
+        <h3 class="headtext p-3"><i class="fa-solid fa-cog"></i> User control</h3>
+
+        <div class="productsNav mt-3 mb-5">
+            <div class="searchBar">
+                <input type="search" placeholder="Search by name or email" id="userSearch">
+                <i class="las la-search"></i>
+            </div>
+        </div>
+        <div class="div tableWrapper">
+            <table class="table table-light">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">User Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">block / unblock</th>
+                        <th scope="col">details</th>
+                        <th scope="col">delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        <% users.map((user, index)=> { %>
+                            <tr class="product-row">
+                                <th scope="row">
+                                    <%= index + 1 %>
+                                </th>
+                                <td class="user-name">
+                                    <%= user.Username %>
+                                </td>
+                                <td class="user-email">
+                                    <%= user.Email %>
+                                </td>
+                                <td>
+                                    <%= user.Phone %>
+                                </td>
+                                <td>
+                                    <% if(user.Blocked){ %>
+                                        <a href="/admin/unblockuser/<%= user.Email %>"
+                                            class="btn btn-dark delete-button" style="width: 80px;"
+                                            onclick="return confirm('Are you sure you want to Unblock this user?')">UnBlock</a>
+                                        <% } else { %>
+                                            <a href="/admin/blockuser/<%= user.Email %>"
+                                                class="btn btn-success delete-button" style="width: 80px;"
+                                                onclick="return confirm('Are you sure you want to block this user?')">Block</a>
+                                            <% } %>
+                                </td>
+                                <td>
+                                    <a href="/admin/showuser/<%= user._id %>" class="btn btn-primary view-user" style="width: 80px;">View</a>
+                                </td>
+                                <td>
+                                    <a href="/admin/deleteuser/<%= user._id %>" class="btn btn-danger delete-button"
+                                        onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+                                </td>
+                            </tr>
+                            <% }); %>
+                </tbody>
+            </table>
         </div>
     </div>
-    <div class="div tableWrapper">
-        <table class="table table-light">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">User Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">block / unblock</th>
-                    <th scope="col">details</th>
-                    <th scope="col">delete</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% users.map((user, index)=> { %>
-                    <tr class="product-row">
-                        <th scope="row">
-                            <%= index + 1 %>
-                        </th>
-                        <td class="user-name">
-                            <%= user.Username %>
-                        </td>
-                        <td class="user-email">
-                            <%= user.Email %>
-                        </td>
-                        <td>
-                            <%= user.Phone %>
-                        </td>
-                        <td>
-                            <% if(user.Blocked){ %>
-                                <a href="/admin/unblockuser/<%= user.Email %>" class="btn btn-dark delete-button"
-                                    style="width: 80px;" onclick="return confirm('Are you sure you want to Unblock this user?')" >UnBlock</a>
-                                <% } else { %>
-                                    <a href="/admin/blockuser/<%= user.Email %>" class="btn btn-success delete-button"
-                                        style="width: 80px;" onclick="return confirm('Are you sure you want to block this user?')" >Block</a>
-                                    <% } %>
-                        </td>
-                        <td>
-                            <button class="btn btn-primary openEditBtn" style="width: 80px;" onclick="">View</button>
-                        </td>
-                        <td>
-                            <a href="/admin/deleteuser/<%= user._id %>" class="btn btn-danger delete-button"
-                                onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
-                        </td>
-                    </tr>
-                    <% }); %>
-            </tbody>
-        </table>
-    </div>
+    
     <script>
         document.addEventListener("DOMContentLoaded", () => {
 
