--- a/views/user/verify.ejs
+++ b/views/user/verify.ejs
@@ -6,13 +6,14 @@
     <h3>Enter the verification code that have sended to email <span><%= cookies.email %></span></h3>
     <% } %>
     <% if (error) { %>
-      <h6 style="color: red;"><%= error %></h6> 
+      <h6 style="color: red;"><%= error %></h6>
     <% } %>
     <div class="inputf">
       <div class="mb-3">
         <input type="text" name="vcode" class="form-control" id="vcode">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
+      <div id="countdown" style="color: black; font-size: 24px; width: 80px;text-align: center; font-weight: 600;"> 1:00 </div>
     </div>
   </form>
   <form action="/resendVerification/<%= cookies.email %>" method="post">
@@ -21,3 +22,29 @@
 </div>
 
 <%- include('foot.ejs') %>
+
+<script>
+  // Function to start the countdown
+  function startCountdown() {
+    let seconds = 60;
+
+    const countdownElement = document.getElementById('countdown');
+    const inputField = document.getElementById('vcode');
+
+    const countdownInterval = setInterval(() => {
+      seconds--;
+      if (seconds < 0) {
+        clearInterval(countdownInterval);
+        inputField.disabled = true;
+        countdownElement.innerText = "Time-out";
+      } else {
+        const minutes = Math.floor(seconds / 60);
+        const remainingSeconds = seconds % 60;
+        countdownElement.innerText = ` ${minutes}:${remainingSeconds < 10 ? '0' : ''}${remainingSeconds} `;
+      }
+    }, 1000);
+  }
+
+  // Start the countdown when the page loads
+  window.onload = startCountdown;
+</script>
