30th before review

--- a/views/admin/head.ejs
+++ b/views/admin/head.ejs
@@ -306,6 +306,7 @@
             <a href="/admin/products"><i class="fas fa-table"></i><span>Products</span></a>
             <a href="/admin/users"><i class="fas fa-users"></i><span>Users</span></a>
             <a href="/admin/categories"><i class="fas fa-cogs"></i><span>Categories</span></a>
+            <a href="/admin/orders"><i class="fas fa-cogs"></i><span>Orders</span></a>
         </div>
     </div>
     <!--mobile navigation bar end-->
@@ -320,6 +321,7 @@
         <a href="/admin/products"><i class="fas fa-table"></i><span>Products</span></a>
         <a href="/admin/users"><i class="fas fa-users"></i><span>Users</span></a>
         <a href="/admin/categories"><i class="fas fa-cogs"></i><span>Categories</span></a>
+        <a href="/admin/orders"><i class="fas fa-cogs"></i><span>Orders</span></a>
     </div>
     <!--sidebar end-->
 
