--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -93,7 +93,7 @@
                                         </form>
                                     </div><!-- End .cart-discount -->
 
-                                    <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i
+                                    <a href="/deletecartitems" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i
                                             class="icon-refresh"></i></a>
                                 </div><!-- End .cart-bottom -->
                             </div><!-- End .col-lg-9 -->
@@ -150,7 +150,7 @@
                                             </tr><!-- End .summary-shipping-row -->
 
                                             <tr class="summary-shipping-estimate">
-                                                <td>Estimate for Your Country<br> <a href="dashboard.html">Change
+                                                <td>Estimate for Your Country<br> <a href="/account">Change
                                                         address</a></td>
                                                 <td>&nbsp;</td>
                                             </tr><!-- End .summary-shipping-estimate -->
@@ -159,11 +159,11 @@
                                                 <td>Total:</td>
                                                 <td>$<%= totalPrice.toFixed(2) %>
                                                 </td>
-                                            </tr><!-- End .summary-total -->
+                                         </tr><!-- End .summary-total -->
                                         </tbody>
                                     </table><!-- End .table table-summary -->
 
-                                    <a href="checkout.html"
+                                    <a href="/cartcheckout"
                                         class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
                                 </div><!-- End .summary -->
 
