--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -149,7 +149,7 @@
                                         
                                         <div class="dropdown-cart-action">
                                             <a href="/viewcart" class="btn btn-primary">View Cart</a>
-                                            <a href="checkout.html"
+                                            <a href="/cartcheckout"
                                             class="btn btn-outline-primary-2"><span>Checkout</span><i
                                             class="icon-long-arrow-right"></i></a>
                                         </div><!-- End .dropdown-cart-total -->
@@ -2186,7 +2186,7 @@
                                     <li><a href="product-category-fullwidth.html"><span>Product Category Fullwidth<span
                                                     class="tip tip-new">New</span></span></a></li>
                                     <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="/cartcheckout">Checkout</a></li>
                                     <li><a href="wishlist.html">Wishlist</a></li>
                                     <li><a href="#">Lookbook</a></li>
                                 </ul>
